fix: allow relative paths as image paths to download them